# m3u-player

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  m3u-parser.js  main.js  player.js  store.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
